Disable Rails/Pluck cop
It is not precise as it would also affect ary#map

--- a/.rubocop_rails.yml
+++ b/.rubocop_rails.yml
@@ -67,6 +67,9 @@ Rails/Output:
 Rails/OutputSafety:
   Enabled: false
 
+Rails/Pluck:
+  Enabled: false
+
 Rails/RakeEnvironment:
   Enabled: false
 
