--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -103,6 +103,8 @@ ignore_missing:
   - participate_in
   - see_other_versions
   - actions.invalid_destroy.proposals_count
+  - decidim.budgets.projects_helper.current_rule_explanation.*
+  - decidim.budgets.projects_helper.current_rule_description.*
   - decidim.debates.debate_m.footer.commented_time_ago
 
 # Consider these keys used:
@@ -274,6 +276,11 @@ ignore_unused:
   - decidim.debates.debates.versions_list.*
   - decidim.debates.debates.show.edit_conclusions
   - activemodel.attributes.organization.machine_translation_display_priority_*
+  - decidim.budgets.projects.budget_summary.maximum_and_minimum_projects_rule.*
+  - decidim.budgets.projects.budget_summary.maximum_projects_rule.*
+  - decidim.budgets.projects.budget_summary.minimum_projects_rule.*
+  - decidim.budgets.projects.budget_summary.vote_threshold_percent.*
+  - decidim.budgets.projects.budget_excess.description
   - decidim.debates.debates.orders.*
   - decidim.debates.debate_m.commented_time_ago
 
