--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -277,6 +277,8 @@ ignore_unused:
   - decidim.debates.debates.orders.*
   - decidim.debates.debate_m.commented_time_ago
   - decidim.elections.trustee_zone.trustees.show.identification_keys.upload_error.*
+  - decidim.elections.feedback.answer.*
+
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
