--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -276,10 +276,10 @@ ignore_unused:
   - decidim.debates.debates.versions_list.*
   - decidim.debates.debates.show.edit_conclusions
   - activemodel.attributes.organization.machine_translation_display_priority_*
-  - decidim.budgets.projects.budget_summary.maximum_and_minimum_projects_rule.*
-  - decidim.budgets.projects.budget_summary.maximum_projects_rule.*
   - decidim.budgets.projects.budget_summary.minimum_projects_rule.*
-  - decidim.budgets.projects.budget_summary.vote_threshold_percent.*
+  - decidim.budgets.projects.budget_summary.projects_rule.*
+  - decidim.budgets.projects.budget_summary.projects_rule_maximum_only.*
+  - decidim.budgets.projects.budget_summary.vote_threshold_percent_rule.*
   - decidim.budgets.projects.budget_excess.description
   - decidim.debates.debates.orders.*
   - decidim.debates.debate_m.commented_time_ago
