--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.140.1/containers/ruby-rails
 {
 	"name": "Ruby on Rails",
-	"workspaceFolder": "/workspaces/dife-decidim-app",
+	"workspaceFolder": "/workspace",
 	"service": "rails",
 	"dockerComposeFile": [
 		"docker-compose.yml"
