Add slash in PR linter configuration
To only catch when someones leave the default title when working with
`hub` or `gh`, that's the default branch, and not when someone uses
"Refactor XXX" as title.

--- a/.github/workflows/lint_pr_format.yml
+++ b/.github/workflows/lint_pr_format.yml
@@ -16,7 +16,7 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - uses: deepakputhraya/action-pr-title@master
         with:
-          disallowed_prefixes: "feat,chore,build,ci,refactor,docs,wip"
+          disallowed_prefixes: "feat/,chore/,build/,ci/,refactor/,docs/,wip/"
           prefix_case_sensitive: false
           min_length: 5
           max_length: 100
