--- a/.github/workflows/ci_elections_unit_tests.yml
+++ b/.github/workflows/ci_elections_unit_tests.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   main:
     name: Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: "!startsWith(github.head_ref, 'chore/l10n')"
     timeout-minutes: 60
     services:
@@ -44,7 +44,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: postgres
       bulletin_board:
-        image: decidim/decidim-bulletin-board:0.23.0
+        image: decidim/decidim-bulletin-board:0.24.1
         ports: ["8000:8000"]
         env:
           DATABASE_URL: postgresql://postgres:postgres@postgres/bb
