--- a/.github/workflows/ci_consultations.yml
+++ b/.github/workflows/ci_consultations.yml
@@ -24,6 +24,10 @@ env:
   DECIDIM_MODULE: decidim-consultations
   PARALLEL_TEST_PROCESSORS: 2
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   main:
     name: Tests
