--- a/.github/workflows/ci_core_system.yml
+++ b/.github/workflows/ci_core_system.yml
@@ -23,6 +23,10 @@ env:
   PARALLEL_TEST_PROCESSORS: 2
   DECIDIM_SERVICE_WORKER_ENABLED: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   main:
     name: Tests
