--- a/.github/workflows/ci_sortitions.yml
+++ b/.github/workflows/ci_sortitions.yml
@@ -25,6 +25,10 @@ env:
   DECIDIM_MODULE: decidim-sortitions
   PARALLEL_TEST_PROCESSORS: 2
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   main:
     name: Tests
