--- a/.github/workflows/ci_system.yml
+++ b/.github/workflows/ci_system.yml
@@ -22,6 +22,10 @@ env:
   DECIDIM_MODULE: decidim-system
   PARALLEL_TEST_PROCESSORS: 2
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   main:
     name: Tests
