--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -115,6 +115,8 @@ ignore_missing:
   - decidim.budgets.projects_helper.current_rule_explanation.*
   - decidim.budgets.projects_helper.current_rule_description.*
   - decidim.debates.debate_m.footer.commented_time_ago
+  - date.abbr_day_names
+  - date.month_names
 
 # Consider these keys used:
 ignore_unused:
@@ -332,6 +334,9 @@ ignore_unused:
   - ransack.predicates.*
   - decidim.profiles.user.actions.*
   - decidim.forms.questionnaires.show.answer_questionnaire.*
+  - versions.dropdown.option_*
+  - decidim.meetings.meetings.filters.*
+  - decidim.meetings.directory.meetings.index.space_type
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
