--- a/decidim_app-design/packages/core/package.json
+++ b/decidim_app-design/packages/core/package.json
@@ -14,6 +14,11 @@
     "@picmo/popup-picker": "^5.6.1",
     "@rails/activestorage": "^6.0.4",
     "@tarekraafat/autocomplete.js": "^10.2.6",
+    "@tiptap/core": "^2.0.0-beta.199",
+    "@tiptap/extension-image": "^2.0.0-beta.199",
+    "@tiptap/extension-link": "^2.0.0-beta.199",
+    "@tiptap/extension-underline": "^2.0.0-beta.199",
+    "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@zeitiger/appendaround": "^1.0.0",
     "a11y-accordion-component": "^1.2.6",
     "a11y-dialog-component": "^5.5.1",
@@ -38,7 +43,6 @@
     "leaflet.markercluster": "1.4.1",
     "morphdom": "2.6.1",
     "prop-types": "^15.7.2",
-    "quill": "1.3.7",
     "raf": "^3.4.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
