--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,8 +17,10 @@
     "@tiptap/core": "^2.0.0-beta.199",
     "@tiptap/extension-image": "^2.0.0-beta.199",
     "@tiptap/extension-link": "^2.0.0-beta.199",
+    "@tiptap/extension-mention": "^2.0.0-beta.199",
     "@tiptap/extension-underline": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "@tiptap/suggestion": "^2.0.0-beta.199",
     "@zeitiger/appendaround": "^1.0.0",
     "a11y-accordion-component": "^1.2.6",
     "a11y-dialog-component": "^5.5.1",
