--- a/decidim_app-design/packages/core/package.json
+++ b/decidim_app-design/packages/core/package.json
@@ -15,6 +15,7 @@
     "@rails/activestorage": "^6.0.4",
     "@tarekraafat/autocomplete.js": "^10.2.6",
     "@tiptap/core": "^2.0.0-beta.199",
+    "@tiptap/extension-character-count": "^2.0.0-beta.199",
     "@tiptap/extension-image": "^2.0.0-beta.199",
     "@tiptap/extension-link": "^2.0.0-beta.199",
     "@tiptap/extension-mention": "^2.0.0-beta.199",
