--- a/.github/workflows/ci_generators_rest.yml
+++ b/.github/workflows/ci_generators_rest.yml
@@ -1,4 +1,4 @@
-name: "[CI] Generators"
+name: "[CI] Generators (Full Application)"
 on:
   push:
     branches:
@@ -71,10 +71,7 @@ jobs:
       - run: bundle install --jobs 4 --retry 3
         name: Install Ruby deps
         working-directory: ${{ env.DECIDIM_MODULE }}
-      - run: bundle exec brakeman --rails6 --force-scan .
-        name: Scanning Security issues on module
-        working-directory: ${{ env.DECIDIM_MODULE }}
-      - run: bundle exec rake parallel:spec
+      - run: bundle exec rspec spec/runtime/full_app_generator_spec.rb
         name: RSpec
         working-directory: ${{ env.DECIDIM_MODULE }}
         env:
