--- a/.github/workflows/ci_generators_main.yml
+++ b/.github/workflows/ci_generators_main.yml
@@ -79,5 +79,8 @@ jobs:
         working-directory: ${{ env.DECIDIM_MODULE }}
         env:
           SIMPLECOV: "true"
-      - run: ./.github/upload_coverage.sh $DECIDIM_MODULE $GITHUB_EVENT_PATH
+      - uses: codecov/codecov-action@v3
         name: Upload coverage
+        with:
+          name: ${{ env.DECIDIM_MODULE }}
+          directory: ${{ env.DECIDIM_MODULE }}
