--- a/.github/workflows/ci_verifications.yml
+++ b/.github/workflows/ci_verifications.yml
@@ -71,9 +71,9 @@ jobs:
           SIMPLECOV: "true"
       - uses: codecov/codecov-action@v3
         name: Upload coverage
+        working-directory: ${{ env.DECIDIM_MODULE }}
         with:
           name: ${{ env.DECIDIM_MODULE }}
-          directory: ${{ env.DECIDIM_MODULE }}
       - uses: actions/upload-artifact@v2
         if: always()
         with:
