--- a/.github/workflows/ci_core_lib.yml
+++ b/.github/workflows/ci_core_lib.yml
@@ -69,7 +69,7 @@ jobs:
         name: Upload coverage
         working-directory: ${{ env.DECIDIM_MODULE }}
         with:
-          name: ${{ env.DECIDIM_MODULE }}
+          name: decidim-core-lib
       - uses: actions/upload-artifact@v2
         if: always()
         with:
