--- a/.github/workflows/ci_generators_flags.yml
+++ b/.github/workflows/ci_generators_flags.yml
@@ -80,3 +80,4 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-generators-flags
+          flags: decidim-generators-flags
