--- a/.github/workflows/ci_initiatives_system_public.yml
+++ b/.github/workflows/ci_initiatives_system_public.yml
@@ -75,6 +75,7 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-initiatives-system-public
+          flags: decidim-initiatives-system-public
       - uses: actions/upload-artifact@v2
         if: always()
         with:
