--- a/.github/workflows/ci_proposals_system_admin.yml
+++ b/.github/workflows/ci_proposals_system_admin.yml
@@ -78,6 +78,7 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-proposals-system-admin
+          flags: decidim-proposals-system-admin
       - uses: actions/upload-artifact@v2
         if: always()
         with:
