--- a/.github/workflows/ci_api.yml
+++ b/.github/workflows/ci_api.yml
@@ -70,6 +70,7 @@ jobs:
         name: Upload coverage
         with:
           name: ${{ env.DECIDIM_MODULE }}
+          flags: ${{ env.DECIDIM_MODULE }}
       - uses: actions/upload-artifact@v2
         if: always()
         with:
