--- a/.github/workflows/ci_core_lib.yml
+++ b/.github/workflows/ci_core_lib.yml
@@ -69,6 +69,7 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-core-lib
+          flags: decidim-core-lib
       - uses: actions/upload-artifact@v2
         if: always()
         with:
