--- a/.github/workflows/ci_elections_system_admin.yml
+++ b/.github/workflows/ci_elections_system_admin.yml
@@ -88,6 +88,7 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-elections-system-admin
+          flags: decidim-elections-system-admin
       - uses: actions/upload-artifact@v2
         if: always()
         with:
