--- a/.github/workflows/ci_elections_unit_tests.yml
+++ b/.github/workflows/ci_elections_unit_tests.yml
@@ -84,6 +84,7 @@ jobs:
         name: Upload coverage
         with:
           name: ${{ env.DECIDIM_MODULE }}
+          flags: ${{ env.DECIDIM_MODULE }}
       - uses: actions/upload-artifact@v2
         if: always()
         with:
