--- a/.github/workflows/ci_meetings_system_public.yml
+++ b/.github/workflows/ci_meetings_system_public.yml
@@ -76,6 +76,7 @@ jobs:
         name: Upload coverage
         with:
           name: decidim-meetings-system-public
+          flags: decidim-meetings-system-public
       - uses: actions/upload-artifact@v2
         if: always()
         with:
