--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -110,6 +110,7 @@ ignore_missing:
   - decidim.budgets.projects_helper.current_rule_explanation.*
   - decidim.budgets.projects_helper.current_rule_description.*
   - decidim.debates.debate_m.footer.commented_time_ago
+  - explanation
 
 # Consider these keys used:
 ignore_unused:
@@ -321,6 +322,7 @@ ignore_unused:
   - decidim.assemblies.admin.assembly_members.form.non_user_avatar_help
   - decidim.blogs.admin_log.*
   - decidim.templates.admin_log.*
+  - decidim.forms.upload_help.explanation
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
