--- a/.github/workflows/ci_api.yml
+++ b/.github/workflows/ci_api.yml
@@ -23,6 +23,7 @@ env:
   NODE_VERSION: 16.9.1
   DECIDIM_MODULE: decidim-api
   PARALLEL_TEST_PROCESSORS: 2
+  CODECOV_TOKEN: bc15b944-6b42-420a-b3f9-a5a8fb214326
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -69,6 +70,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         name: Upload coverage
         with:
+          token: ${{ env.CODECOV_TOKEN }}
           name: ${{ env.DECIDIM_MODULE }}
           flags: ${{ env.DECIDIM_MODULE }}
       - uses: actions/upload-artifact@v2
