--- a/.github/workflows/ci_core_system.yml
+++ b/.github/workflows/ci_core_system.yml
@@ -22,6 +22,7 @@ env:
   DECIDIM_MODULE: decidim-core
   PARALLEL_TEST_PROCESSORS: 2
   DECIDIM_SERVICE_WORKER_ENABLED: true
+  CODECOV_TOKEN: bc15b944-6b42-420a-b3f9-a5a8fb214326
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -75,6 +76,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         name: Upload coverage
         with:
+          token: ${{ env.CODECOV_TOKEN }}
           name: decidim-core-system
           flags: decidim-core-system
       - uses: actions/upload-artifact@v2
