--- a/.github/workflows/ci_generators_rest.yml
+++ b/.github/workflows/ci_generators_rest.yml
@@ -20,6 +20,7 @@ env:
   NODE_VERSION: 16.9.1
   DECIDIM_MODULE: decidim-generators
   PARALLEL_TEST_PROCESSORS: 2
+  CODECOV_TOKEN: bc15b944-6b42-420a-b3f9-a5a8fb214326
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -79,5 +80,6 @@ jobs:
       - uses: codecov/codecov-action@v3
         name: Upload coverage
         with:
+          token: ${{ env.CODECOV_TOKEN }}
           name: decidim-generators-rest
           flags: decidim-generators-rest
