--- a/.github/workflows/ci_meetings_system_public.yml
+++ b/.github/workflows/ci_meetings_system_public.yml
@@ -25,6 +25,7 @@ env:
   NODE_VERSION: 16.9.1
   DECIDIM_MODULE: decidim-meetings
   PARALLEL_TEST_PROCESSORS: 2
+  CODECOV_TOKEN: bc15b944-6b42-420a-b3f9-a5a8fb214326
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -75,6 +76,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         name: Upload coverage
         with:
+          token: ${{ env.CODECOV_TOKEN }}
           name: decidim-meetings-system-public
           flags: decidim-meetings-system-public
       - uses: actions/upload-artifact@v2
